# Elite-Dangerous-Rich-Presence

./: .gitignore  .licensed.yml  .pylintrc  BackgroundApp.py  EliteDangerousRichPresenceApp.py  Gemfile  JournalFileApp.py  LICENSE  README.md  SettingsApp.py  TrayApp.py  build.bat  config.example.ini  config.ini  elitedangerousrichpresence.kv  elitedangerousrichpresence.profile  filter_journals.py  gui.py  journal.py  licensed.yml  logging.yaml  main.py  pyproject.toml  requirements.txt  settings.json  settings.kv  settings.yaml  trayicon.py  watch.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  licensed.yml
elite_dangerous_rich_presence/: __init__.py  __main__.py  event_processor.py  journal_reader.py  settings_app.py  settings_config.py  status_reader.py  taskbar_app.py  util.py
elite_dangerous_rich_presence/user_controls/: __init__.py  elite_dangerous.py  general.py  rich_presence.py
