[tool.poetry]
name = "elite-dangerous-rich-presence"
version = "5.0.0"
description = ""
authors = ["Lasa2 <hi.lasse11@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "elite_dangerous_rich_presence" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.5"
flet = "^0.4.0"
pypresence = "^4.2.1"
pywin32 = "^305"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
pylint = "^2.16.2"
pylint-pydantic = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
