[tool.poetry]
authors = ["Lasa2 <hi.lasse11@gmail.com>"]
description = "A standalone Discord Rich Presence application which hides in the System Tray."
license = "MIT"
name = "elite-dangerous-rich-presence"
packages = [{include = "elite_dangerous_rich_presence"}]
readme = "README.md"
version = "5.3.0"

[tool.poetry.dependencies]
loguru = "^0.7.0"
pypresence = "^4.2.1"
python = ">=3.11,<3.12"
pywin32 = "^306"
httpx = "^0.23.0"
pydantic-settings = "^2.2.1"
flet = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.10.1"
ruff = "^0.3.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
